--- a/public/_/css/site.css
+++ b/public/_/css/site.css
@@ -2677,4 +2677,10 @@ footer.footer {
     color: inherit;
   }
 }
+
+@tailwind base;
+
+@tailwind components;
+
+@tailwind utilities;
 /*# sourceMappingURL=site.css.map */
