--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -1,6 +1,6 @@
 .doc {
   color: var(--doc-font-color);
-  font-size: var(--doc-font-size);
+  font-size: calc(16/var(--rem-base)*1rem);
   hyphens: auto;
   line-height: var(--doc-line-height);
   margin: var(--doc-margin);
@@ -11,7 +11,7 @@
 @media screen and (min-width: 1024px) {
   .doc {
     flex: auto;
-    font-size: var(--doc-font-size--desktop);
+    font-size: calc(16/var(--rem-base)*1rem);
     margin: var(--doc-margin--desktop);
     max-width: var(--doc-max-width--desktop);
     min-width: 0;
@@ -25,15 +25,20 @@
 .doc h5,
 .doc h6 {
   color: var(--heading-font-color);
-  font-weight: var(--heading-font-weight);
+  font-weight: var(--body-font-weight-bold);
   hyphens: none;
   line-height: 1.3;
   margin: 1rem 0 0;
 }
 
 .doc > h1.page:first-child {
-  font-size: calc(36 / var(--rem-base) * 1rem);
+  font-size: calc(32 / var(--rem-base) * 1rem);
   margin: 1.5rem 0;
+  font-weight: var(--body-font-weight-bold);
+}
+
+.doc h2 {
+  font-size: calc(24/var(--rem-base)*1rem);
 }
 
 @media screen and (min-width: 769px) {
@@ -48,7 +53,7 @@ h1.page + aside.toc.embedded {
 
 #preamble + .sect1,
 .doc .sect1 + .sect1 {
-  margin-top: 2rem;
+  margin-top: 4rem;
 }
 
 .doc h1.sect0 {
@@ -537,75 +542,14 @@ h1.page + aside.toc.embedded {
   padding-bottom: 0;
 }
 
-.doc details {
-  margin-left: 1rem;
-}
-
-.doc details > summary {
-  display: block;
-  position: relative;
-  line-height: var(--doc-line-height);
-  margin-bottom: 0.5rem;
-}
-
-.doc details > summary::before {
-  content: "";
-  border: solid transparent;
-  border-left-color: currentColor;
-  border-width: 0.3em 0 0.3em 0.5em;
-  position: absolute;
-  top: calc((var(--doc-line-height) * 0.5 - 0.3) * 1em);
-  left: -1rem;
-  transform: translateX(15%);
-}
-
-.doc details[open] > summary::before {
-  border: solid transparent;
-  border-top-color: currentColor;
-  border-width: 0.5rem 0.3rem 0;
-  transform: translateY(15%);
-}
-
-.doc details > summary::after {
-  content: "";
-  width: 1rem;
-  height: 1em;
-  position: absolute;
-  top: calc((var(--doc-line-height) * 0.5 - 0.5) * 1em);
-  left: -1rem;
-}
-
-.doc details.result {
-  margin-top: 0.25rem;
-}
-
-.doc details.result > summary {
-  color: var(--caption-font-color);
-  font-style: italic;
-  margin-bottom: 0;
-}
-
-.doc details.result > .content {
-  margin-left: -1rem;
-}
-
-.doc .exampleblock > .content,
-.doc details.result > .content {
+.doc .exampleblock > .content {
   background: var(--example-background);
   border: 0.25rem solid var(--example-border-color);
   border-radius: 0.5rem;
   padding: 0.75rem;
 }
 
-.doc .exampleblock > .content::after,
-.doc details.result > .content::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.doc .exampleblock > .content > :first-child,
-.doc details > .content > :first-child {
+.doc .exampleblock > .content > :first-child {
   margin-top: 0;
 }
 
