--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,7 +3,7 @@ html.is-clipped--navbar {
 }
 
 body {
-  padding-top: var(--navbar-height);
+  /* padding-top: var(--navbar-height); */
 }
 
 .navbar {
@@ -15,6 +15,7 @@ body {
   top: 0;
   width: 100%;
   z-index: var(--z-index-navbar);
+  padding:0 1rem;
 }
 
 .navbar a {
@@ -23,7 +24,7 @@ body {
 
 .navbar-brand {
   display: flex;
-  padding-left: 1rem;
+  padding: 0 1rem;
 }
 
 .navbar-brand .navbar-item:first-child,
@@ -35,7 +36,7 @@ body {
 }
 
 .navbar-brand .separator {
-  padding: 0 0.375rem;
+  padding: 0 0.25rem;
 }
 
 .navbar-burger {
@@ -55,7 +56,7 @@ body {
 }
 
 .navbar-burger span {
-  background-color: var(--navbar-font-color);
+  background-color: var(--navbar-font-color); 
   height: 1.5px;
   width: 1rem;
 }
@@ -89,7 +90,7 @@ body {
   color: var(--navbar-menu-font-color);
   display: block;
   line-height: var(--doc-line-height);
-  padding: 0.5rem 1rem;
+  padding: 0;
 }
 
 .navbar-item.has-dropdown {
