--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -3,9 +3,10 @@
   top: var(--navbar-height);
   left: 0;
   width: 100%;
-  font-size: calc(17 / var(--rem-base) * 1rem);
+  font-size: calc(15 / var(--rem-base) * 1rem);
   z-index: var(--z-index-nav);
   visibility: hidden;
+  border-right: 1px solid var(--color-body-5);
 }
 
 @media screen and (min-width: 769px) {
@@ -16,7 +17,7 @@
 
 @media screen and (min-width: 1024px) {
   .nav-container {
-    font-size: calc(15.5 / var(--rem-base) * 1rem);
+    font-size: calc(14 / var(--rem-base) * 1rem);
     flex: none;
     position: static;
     top: 0;
@@ -31,7 +32,7 @@
 .nav {
   background: var(--nav-background);
   position: relative;
-  top: var(--toolbar-height);
+  /* top: var(--toolbar-height); */
   height: var(--nav-height);
 }
 
@@ -82,7 +83,7 @@ html.is-clipped--nav {
 
 .nav-menu {
   min-height: 100%;
-  padding: 0.5rem 0.75rem;
+  padding: 0.5rem 1rem;
   line-height: var(--nav-line-height);
   position: relative;
 }
@@ -93,6 +94,10 @@ html.is-clipped--nav {
   font-weight: var(--body-font-weight-bold);
   margin: 0;
   padding: 0.25em 0 0.125em;
+}
+
+.nav-text {
+  color: var(--color-body-1);
 }
 
 .nav-menu a {
@@ -110,7 +115,8 @@ html.is-clipped--nav {
 
 .nav-item {
   list-style: none;
-  margin-top: 0.5em;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 /* adds some breathing room below a nested list */
@@ -146,7 +152,7 @@ html.is-clipped--nav {
 
 .is-current-page > .nav-link,
 .is-current-page > .nav-text {
-  font-weight: var(--body-font-weight-bold);
+  color: var(--color-secondary) !important;
 }
 
 .nav-panel-explore {
