--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -3,7 +3,7 @@
   <head>
 {{> head defaultPageTitle='Untitled'}}
   </head>
-  <body class="article{{#with (or page.attributes.role page.role)}} {{{this}}}{{/with}}">
+  <body class="article{{#with (or page.attributes.role page.role)}} {{{this}}}{{/with}} lg:pt-[90px] pt-[52px]">
 {{> header}}
 {{> body}}
 {{> footer}}
