--- a/src/partials/toolbar.hbs
+++ b/src/partials/toolbar.hbs
@@ -1,4 +1,4 @@
-<div class="toolbar" role="navigation">
+<div class="toolbar lg:top-[90px] bg-white border-b border-border-light" role="navigation">
 {{> nav-toggle}}
   {{#with site.homeUrl}}
   <a href="{{{relativize this}}}" class="home-link{{#if @root.page.home}} is-current{{/if}}"></a>
