--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -117,6 +117,7 @@ html.is-clipped--nav {
   list-style: none;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+  color: var(--color-body-1);
 }
 
 /* adds some breathing room below a nested list */
