--- a/src/css/toolbar.css
+++ b/src/css/toolbar.css
@@ -17,7 +17,7 @@
 }
 
 .nav-toggle {
-  background: url(../img/menu.svg) no-repeat 50% 47.5%;
+  background: url(../img/sidenavOpen.svg) no-repeat 50% 47.5%;
   background-size: 49%;
   border: none;
   outline: none;
@@ -35,8 +35,8 @@
 }
 
 .nav-toggle.is-active {
-  background-image: url(../img/back.svg);
-  background-size: 41.5%;
+  background-image: url(../img/sidenavClose.svg);
+  background-size: 49%;
 }
 
 .home-link {
