--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -22,18 +22,18 @@
     </div>
     <div id="topbar-nav" class="navbar-menu px-8">
       <div class="w-full flex justify-between items-center">
-        <ul id="" class="text-sm lg:flex space-x-8">
+        <ul id="" class="text-sm lg:flex lg:space-x-8">
           <li class="">
-            <a class="navbar-item focus:border-b-2 focus:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" href="#"><p class="pb-4">Home</p></a>
+            <a class="navbar-item lg:focus:border-b-2 lg:focus:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" href="#"><p class="pb-4">Home</p></a>
           </li>
           <li class="">
-            <a class="navbar-item focus:border-b-2 focus:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" href="#"><p class="pb-4">Project XYZ</p></a>
+            <a class="navbar-item lg:focus:border-b-2 lg:focus:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" href="#"><p class="pb-4">Project XYZ</p></a>
           </li>
           <li class="">
-            <a class="navbar-item focus:border-b-2 focus:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" href="#"><p class="pb-4">Services</p></a>
+            <a class="navbar-item lg:focus:border-b-2 lg:focus:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" href="#"><p class="pb-4">Services</p></a>
           </li>
           <li class="">
-            <a class="navbar-item focus:border-b-2 focus:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" href="#"><p class="pb-4">Resources</p></a>
+            <a class="navbar-item lg:focus:border-b-2 lg:focus:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" href="#"><p class="pb-4">Resources</p></a>
           </li>
         </ul>
         <div style="padding-bottom: 10px;" class="hidden lg:flex items-center lg:ml-12">
