added landing page

--- a/src/partials/head-styles.hbs
+++ b/src/partials/head-styles.hbs
@@ -1,1 +1,2 @@
     <link rel="stylesheet" href="{{{uiRootPath}}}/css/site.css">
+    <link rel="stylesheet" href="https://use.typekit.net/xxv0hnj.css">              
