--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -24,7 +24,8 @@
       <div class="w-full flex justify-between items-center">
         <ul id="" class="text-sm lg:flex lg:space-x-8">
           <li class="">
-            <a class="navbar-item lg:focus:border-b-2 lg:focus:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" href="#"><p class="pb-4">Home</p></a>
+            <a class="navbar-item lg:focus:border-b-2 lg:focus:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" 
+              href="#"><p class="pb-4">Home</p></a>
           </li>
           <li class="">
             <a class="navbar-item lg:focus:border-b-2 lg:focus:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" href="#"><p class="pb-4">Project XYZ</p></a>
@@ -47,16 +48,6 @@
         </div>
       </div>
     </div>
-
-    {{!-- <div id="topbar-nav" class="navbar-menu">
-      <div class="">
-        <a class="navbar-item" href="#">Home</a>
-        <a class="navbar-link" href="#">Products</a>
-        <a class="navbar-link" href="#">Services</a>
-        <a class="navbar-link" href="#">Resources</a>
-      </div>
-    </div> --}}
-
 
 
 
