--- a/src/partials/toolbar.hbs
+++ b/src/partials/toolbar.hbs
@@ -1,4 +1,4 @@
-<div class="toolbar lg:top-[90px] bg-white border-b border-border-light" role="navigation"><span class="ml-4 mr-[-9px] text-xs text-body-1">Menu</span>
+<div class="toolbar lg:top-[90px] bg-white border-b border-border-light" role="navigation"><span class="lg:hidden ml-4 mr-[-9px] text-xs text-body-1">Menu</span>
 {{> nav-toggle}}
   {{#with site.homeUrl}}
   <a href="{{{relativize this}}}" class="home-link{{#if @root.page.home}} is-current{{/if}}"></a>
