--- a/src/css/site.css
+++ b/src/css/site.css
@@ -5,6 +5,7 @@
 @import "body.css";
 @import "nav.css";
 @import "main.css";
+@import "home.css";
 @import "toolbar.css";
 @import "breadcrumbs.css";
 @import "page-versions.css";
@@ -18,3 +19,5 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+
