--- a/src/layouts/home.hbs
+++ b/src/layouts/home.hbs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,7 +6,7 @@
   </head>
   <body class="article{{#with (or page.attributes.role page.role)}} {{{this}}}{{/with}} lg:pt-[90px] pt-[52px]">
 {{> header }}
-{{> body }}
+{{> body-home}}
 {{> footer}}
   </body>
 </html>
