--- a/src/css/toc.css
+++ b/src/css/toc.css
@@ -79,7 +79,7 @@
 }
 
 .toc .toc-menu a:hover {
-  color: var(--link-font-color);
+  color: var(--link_hover-font-color);
 }
 
 .toc .toc-menu a.is-active {
