--- a/src/layouts/home.hbs
+++ b/src/layouts/home.hbs
@@ -4,9 +4,9 @@
   <head>
 {{> head defaultPageTitle='Untitled'}}
   </head>
-  <body class="article{{#with (or page.attributes.role page.role)}} {{{this}}}{{/with}} lg:pt-[90px] pt-[52px]">
+  <body class="article{{#with (or page.attributes.role page.role)}} {{{this}}}{{/with}} lg:pt-[90px] lg:pt-[52px] pt-[44px]">
 {{> header }}
 {{> body-home}}
 {{> footer}}
   </body>
-</html>
+</html> 
