--- a/src/css/base.css
+++ b/src/css/base.css
@@ -31,7 +31,8 @@ a {
 }
 
 a:hover {
-  text-decoration: underline;
+  text-decoration: none;
+  color: var(--link_hover-font-color) !important;
 }
 
 a:active {
