--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -3,9 +3,10 @@
   <head>
 {{> head defaultPageTitle='Untitled'}}
   </head>
-  <body class="article{{#with (or page.attributes.role page.role)}} {{{this}}}{{/with}} lg:pt-[90px] pt-[52px]">
+  <body class="article{{#with (or page.attributes.role page.role)}} {{{this}}}{{/with}} lg:pt-[90px] lg:pt-[52px] pt-[44px]">
 {{> header }}
 {{> body }}
 {{> footer}}
   </body>
-</html>
+</html> 
+ 
