--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -1,6 +1,6 @@
 <header class="w-full fixed top-0 bg-white z-10 shadow-md">
   <nav class="relative">
-    <div class="lg:px-8 px-4 pt-2 pb-4">
+    <div class="lg:px-8 px-4 pt-2 lg:pb-4 pb-2">
       <div class="flex justify-between items-center">
         <a class="" href="{{{or site.url (or siteRootUrl siteRootPath)}}}">
           <img src="{{{uiRootPath}}}/img/onoteDocsLogo.svg" alt="oNote" width="161.13" height="auto" />
