WIP header navigation

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -46,8 +46,8 @@ window.onload = function() {
         <ul id="docsMenu" class="text-sm lg:flex">
           <li class="navbar-item lg:mr-8">
             <a class="navbar-link box-border lg:border-b-2 lg:border-white lg:focus:text-secondary lg:focus:border-secondary lg:active:text-secondary lg:active:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" 
-              href="{{{or site.url (or siteRootUrl siteRootPath)}}}"><p class="pb-4">Home</p></a>
-              {{!-- href="{{{relativize (resolvePageURL 'onote-docs::home.adoc')}}}"><p class="pb-4">Home</p></a> --}}
+              {{!-- href="{{{or site.url (or siteRootUrl siteRootPath)}}}"><p class="pb-4">Home</p></a> --}}
+              href="{{{relativize (resolvePageURL 'onote-docs::home.adoc')}}}"><p class="pb-4">Home</p></a>
           </li>
           <li class="navbar-item lg:mr-8">
             <a class="navbar-link box-border lg:border-b-2 lg:border-white lg:focus:text-secondary lg:focus:border-secondary lg:active:text-secondary lg:active:border-secondary mx-0 text-sm whitespace-nowrap text-body-1 hover:text-secondary transition duration-300 ease-in-out inline-flex no-underline" 
@@ -68,4 +68,5 @@ window.onload = function() {
     </div>
   </nav>
 </header>
+
 
