--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -26,14 +26,14 @@ window.onload = function() {
         <a class="" href="{{{or site.url (or siteRootUrl siteRootPath)}}}">
           <img src="{{{uiRootPath}}}/img/onoteDocsLogo.svg" alt="oNote" width="161.13" height="auto" />
         </a>
-        <form class="hidden lg:block">
+        {{!-- <form class="hidden lg:block">
            <div class="box-border rounded-md w-96 border border-gray-300 bg-white px-4 py-1 flex whitespace-nowrap">
               <span class="w-auto flex justify-end items-center">
                   <img src="{{{uiRootPath}}}/img/ico-search.svg" alt="search" width="auto" height="14" />
               </span>
               <input class="outline-none placeholder-gray-500::placeholder w-full rounded px-4 text-sm" type="text" placeholder="Search Docs">
           </div>
-        </form>
+        </form> --}}
         <button class="navbar-burger" data-target="topbar-nav">
           <span></span>
           <span></span>
