--- a/src/partials/body-home.hbs
+++ b/src/partials/body-home.hbs
@@ -2,10 +2,10 @@
     <main class="container h-screen lg:max-w-[1280px] mx-auto h-auto relative py-16">
         <div class="">
             <h1 class="text-center pb-4">Welcome to <span class="text-transparent bg-clip-text bg-gradient-to-b from-primary to-secondary-red">oNote</span> documentation</h1>
-            <p class="text-center text-body-1 text-[18px]">To get started, take the <a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#">comprehensive tour of the oNote application.</a></p>
+            <p class="text-center text-body-1 text-[18px]">To get started, take the <a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#">comprehensive tour</a>.</p>
         </div>
         <div class="my-16">
-            <p class="pl-4 mb-2">Get started</p>
+            <p class="pl-4 mb-2">Get started with oNote</p>
             <div class="grid lg:grid-cols-11 px-4">
                 <div class="w-full lg:col-span-3 mx-auto">
                     <div class="border border-border-light shadow-md rounded-md p-4">
@@ -17,7 +17,6 @@
                             <ul class="table mx-auto">
                                 <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#">Create an event model tutorial</a></li>
                                 <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#">Collaborate on a model design</a></li>
-                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#">Manage design schemas</a></li>
                             </ul>
                         </div>
                     </div>
@@ -34,7 +33,8 @@
                             <h2 class="text-center mb-4 whitespace-nowrap">2. Implement</h2>
                             <ul class="table mx-auto">
                                 <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#">Export a model in JSON</a></li>
-                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#">Generate code TBD</a></li>
+                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#">Generate Avro</a></li>
+                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#">Manage design schemas</a></li>
                             </ul>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                         <div class="min-h-[185px] px-4 mt-4">
                             <h2 class="text-center mb-4 whitespace-nowrap">3. Operate</h2>
                             <ul class="table mx-auto">
-                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#">TBD</a></li>
+                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#"></a>Coming soon</li>
                             </ul>
                         </div>
                     </div>
