--- a/src/partials/body-home.hbs
+++ b/src/partials/body-home.hbs
@@ -15,7 +15,7 @@
                         <div class="min-h-[185px] px-4 mt-4">
                             <h2 class="text-center mb-4 whitespace-nowrap">1. Design</h2>
                             <ul class="table mx-auto">
-                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL 'onote-docs::create-event-mode.adoc')}}}">Create an event model tutorial</a></li>
+                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL 'onote-docs::create-event-model.adoc')}}}">Create an event model tutorial</a></li>
                                 <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#"></a>Collaborate on a model design</li>
                             </ul>
                         </div>
