WIP homepage links

--- a/src/partials/body-home.hbs
+++ b/src/partials/body-home.hbs
@@ -2,7 +2,7 @@
     <main class="container h-screen lg:max-w-[1280px] mx-auto h-auto relative py-16">
         <div class="">
             <h1 class="text-center pb-4">Welcome to <span class="text-transparent bg-clip-text bg-gradient-to-b from-primary to-secondary-red">oNote</span> documentation</h1>
-            <p class="text-center text-body-1 text-[18px]">To get started, take the <a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL 'onote-docs::ui-tour.adoc')}}}">comprehensive tour</a>.</p>
+            <p class="text-center text-body-1 text-[18px]">To get started, take the <a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL 'ui-tour.adoc')}}}">comprehensive tour</a>.</p>
         </div>
         <div class="my-16">
             <p class="pl-4 mb-2">Get started with oNote</p>
@@ -15,8 +15,8 @@
                         <div class="min-h-[185px] px-4 mt-4">
                             <h2 class="text-center mb-4 whitespace-nowrap">1. Design</h2>
                             <ul class="table mx-auto">
-                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL 'onote-docs:models:create-event-model.adoc')}}}">Create an event model tutorial</a></li>
-                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL 'onote-docs:collab:collaboration-overview.adoc')}}}">Collaborate on a model design</a></li>
+                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/models/create-event-model.adoc')}}}">Create an event model tutorial</a></li>
+                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/collab/collaboration-overview.adoc')}}}">Collaborate on a model design</a></li>
                             </ul>
                         </div>
                     </div>
@@ -34,7 +34,7 @@
                             <ul class="table mx-auto">
                                 <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#"></a>Export a model in JSON</li>
                                 <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#"></a>Generate Avro</li>
-                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL 'onote-docs:schemas:schemas-overview.adoc')}}}">Manage design schemas</a></li>
+                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/schemas/schemas-overview.adoc')}}}">Manage design schemas</a></li>
                             </ul>
                         </div>
                     </div>
