WIP homepage link fixes

--- a/src/partials/body-home.hbs
+++ b/src/partials/body-home.hbs
@@ -16,7 +16,7 @@
                             <h2 class="text-center mb-4 whitespace-nowrap">1. Design</h2>
                             <ul class="table mx-auto">
                                 <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/models/create-event-model.adoc')}}}">Create an event model tutorial</a></li>
-                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/collab/collaboration-overview.adoc')}}}">Collaborate on a model design</a></li>
+                                {{!-- <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/collab/collaboration-overview.adoc')}}}">Collaborate on a model design</a></li> --}}
                             </ul>
                         </div>
                     </div>
@@ -32,9 +32,9 @@
                         <div class="min-h-[185px] px-4 mt-4">
                             <h2 class="text-center mb-4 whitespace-nowrap">2. Implement</h2>
                             <ul class="table mx-auto">
-                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#"></a>Export a model in JSON</li>
-                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#"></a>Generate Avro</li>
+                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/models/import-export-models.adoc')}}}">Export a model in JSON</a></li>
                                 <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="{{{relativize (resolvePageURL '/schemas/schemas-overview.adoc')}}}">Manage design schemas</a></li>
+                                <li class="text-body-1 list-disc"><a class="no-underline text-secondary hover:text-body-4 transform duration-300 ease-in-out" href="#"></a>Generate Avro</li>
                             </ul>
                         </div>
                     </div>
